--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -13,37 +13,37 @@
     <div class="item active">
       <img src="http://lorempixel.com/1170/800/city/9">
       <div class="carousel-caption text-center">
-        <h4>San Francisco</h4>
+        <h4><%= Visitor::IMAGE_LABELS[0]%></h4>
       </div>
     </div>
     <div class="item">
       <img src="http://lorempixel.com/1170/800/city/7">
       <div class="carousel-caption text-center">
-        <h4>Sydney</h4>
+        <h4><%= Visitor::IMAGE_LABELS[1]%></h4>
       </div>
     </div>
     <div class="item">
       <img src="http://lorempixel.com/1170/800/city/6">
       <div class="carousel-caption text-center">
-        <h4>Paris</h4>
+        <h4><%= Visitor::IMAGE_LABELS[2]%></h4>
       </div>
     </div>
     <div class="item">
       <img src="http://lorempixel.com/output/cats-q-c-1170-800-5.jpg">
       <div class="carousel-caption text-center">
-        <h4>Cat Chillin</h4>
+        <h4><%= Visitor::IMAGE_LABELS[3]%></h4>
       </div>
     </div>
     <div class="item">
       <img src="http://lorempixel.com/output/cats-q-g-1170-800-10.jpg">
       <div class="carousel-caption text-center">
-      	<h4>On the Prowl</h4>
+      	<h4><%= Visitor::IMAGE_LABELS[4]%></h4>
       </div>
     </div>
     <div class="item">
       <img src="http://lorempixel.com/output/cats-q-g-1170-800-6.jpg">
       <div class="carousel-caption text-center">
-      <h4>Runnin' The Lot</h4>
+      <h4><%= Visitor::IMAGE_LABELS[5]%></h4>
       </div>
     </div>
   </div>
